# nix-switcher

./: .envrc  .rustfmt.toml  CHANGELOG.md  Cargo.nix  Cargo.toml  README.md  flake.nix  groups  project.config  renovate.json  rust-toolchain-min.toml  rust-toolchain.toml
src/: interface.rs  lib.rs  main.rs
src/cmd/: build.rs  complete.rs  mod.rs
src/config/: mod.rs
src/flake/: mod.rs  ref.rs
src/interface/: mod.rs
src/provider/: mod.rs
src/provider/github/: get_commit_sha.graphql  get_commit_sha_default_branch.graphql  latest_commit.rs  latest_commit_default_branch.rs  mod.rs
src/system/: mod.rs
